--- a/xml_tasks/build.gradle
+++ b/xml_tasks/build.gradle
@@ -12,6 +12,7 @@ repositories {
 
 dependencies {
     implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.2'
+    implementation 'org.glassfish.jaxb:jaxb-runtime:4.0.4'
 
     compileOnly 'org.projectlombok:lombok:1.18.34'
     annotationProcessor 'org.projectlombok:lombok:1.18.34'
